--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "simplebar-react": "^3.2.1",
