--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.14.12",
     "apexcharts": "^3.37.0",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "history": "^5.3.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
